@@ -373,10 +373,10 @@ processes to change \*(PUs more often (because of the extra demand for
 
 .TP 3
 k:\fB %CPU\fR \*(EM \*(PU usage
-The task's share of the elapsed \*(PU time since the last screen update, expressed
-as a percentage of total \*(PU time.
-In a true SMP environment, if 'Irix mode' is \*F, \*(Me will operate in
-\'Solaris mode' where a task's \*(Pu usage will be divided by the total
+The task's share of the elapsed \*(PU time since the last screen update,
+expressed as a percentage of total \*(PU time.
+In a true SMP environment, if 'Irix mode' is \*F, \*(Me will operate
+in 'Solaris mode' where a task's \*(Pu usage will be divided by the total
 number of \*(PUs.
 You toggle 'Irix/Solaris' modes with the 'I' \*(CI.
 
